Fixed search icon alignement

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -44,7 +44,6 @@ $top-bar-height: 52px;
 
     &__search-icon {
         vertical-align: middle;
-        bottom: 3px;
     }
 
     &__logo-link {
